disable intel charts

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:fwYmzJUXPvkbtZqgrsAp2+9mzTsFSfGATWJj/GdgHFLHa+XwI7oVvZSTC8vNQHXOCEgjeFaHmpAoCu47wBGo3+0=,iv:3s9OwwcXhOmZMHB8kiQcJJRp6kMBzpxdWYJiSv18Gmo=,tag:vIlEMAQC5qVR+dIVS3Zrzg==,type:comment]
-#ENC[AES256_GCM,data:VreVGh63iIdirDRsEK84X0D5umX0u0JEhYKcxM2ER3BDmaKUbTnP3+howGo=,iv:Tat54e6PTdwG7cENC2lysqPlq3stDZ6PzUjM6dTIEB8=,tag:ogsRBLLaT80vnF6xQRbqMA==,type:comment]
-VIP: ENC[AES256_GCM,data:mmrI2rYHYs4+Qt0kCg==,iv:nKgSOJeaQZFUyUqAJIULtqu1vArvC++j5ek5eYH5sJs=,tag:mB7hcr/YDVv8AWDLE5A79g==,type:str]
-#ENC[AES256_GCM,data:642EvJOtWF+IfDyeudZqc1L8LuKADNd1x947,iv:7cBZYELVtKubOXVMqgtJmG1/x72aPuBNLFdN6Bzneqw=,tag:tUpCEM+H021JbGevok3+CA==,type:comment]
-#ENC[AES256_GCM,data:WFVotPobkm1rWCEPtmTLAlp4BvL1SrJL6GHYOMiMub7mcZkxvH/JayY92ZHkihnGgV92j+z+LxRynFKbYbP/AmnN8bXpmBZQ4Eqb8sJDhUHexC4VqXSHbug=,iv:7WNGFIsqlJgOu3cllfaB46RLkNC+GoqldGZrSz8jgRw=,tag:rfUFlDnb3eL00nM9ZzqUwQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:CwZnEGhL5Mm76kBGaE0=,iv:CII2dgXf3NCMZRkGL/7wfv8lxSFSoTLBcCcC6PA8VSs=,tag:oIoJ3WocR+6Ch1O6Uu8Usg==,type:str]
-#ENC[AES256_GCM,data:ZjWR1/BEd7WX/REVZPDnb+uyuf/UY46WQQWHybbuj5SWpQ==,iv:/A7j/zMoUoXfsbPeaphiTFrkgWC2vQFYrYeDV93gyA4=,tag:RamPpHfGNmYc11pm4HrF4Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:GV5gR3dNmrzER/Ku4A==,iv:WuTffeTO6MwueGnFqp4ZrK1rhGylOPu5ciIexsmbC6I=,tag:4K8sF6cOijV4zWM+/Cpy9g==,type:str]
-#ENC[AES256_GCM,data:kHbQlmvYREP1AaSkECP8drV/bSOnAoYJ0a5hGauiKsn6OSYP/d/h5lo6st1X2cA=,iv:cIIvFWP7VrTRWf8m3AzndrKJICKV/hpXZSOeRva5Q4g=,tag:C8wvohkSy0lCxjR5r7GywQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:pUrPkQ7a8ALV8VfpayWsreadmE0+DGn/oI5mO0KKeg==,iv:blzWQ+GfGJQx7EAP6iLNpjNuJ7o/CYsKG+G9y5i1JdQ=,tag:plfjVLs+gVizj4epfFhRjA==,type:str]
-#ENC[AES256_GCM,data:PQ8yqZy3vcs8u2hJEukNBAACHpIXwvv0cg8tsexuqakQzA9zoQ4WP42brdw9TBblrb8j3M90jgaV51AootLBed6KRcQkBBfZrq7u/aAxBPhljw==,iv:tylGG1YYO4ireQ2EUGOMtkg1SnBXpt7KFsT8t5IcYnU=,tag:JMnLkxWypUQxYi51UiBmkg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:xBxAXiu8n3IrBgN9R65H,iv:cBNZa78319bW/WdQxtfrsRtnWnIJ+Kz1fGckIDjwv2Q=,tag:j3OiSzl0t+dQfN1rA0oOzg==,type:str]
-#ENC[AES256_GCM,data:4UbsaTdjzhtabmh12mk3pfDgWtDhh7AUAcD34ETECSLc,iv:V+B787MUrcng8J2HLdukW0d4YaD8S0tG14I6TYV4QPg=,tag:mn47r34nlbzHAYRL5ExNow==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:jAvpMmRwKa9Day28C1yM,iv:3okmyqHQyh1lU0nZRvMJLl39Ib2jO48P5s/j3boCYkA=,tag:xo0xROJfQ+uNwD8us4mjkQ==,type:str]
-#ENC[AES256_GCM,data:A4itjRt0O7intUs578VilJkFSwXI27f/+nP7EU1KfDYY96fSPJjsgtxP9mM1JmAf2n2dlGZtEnekh6UdKZHJDoxYH7QetHS1gZl+QoUXH9g=,iv:G8kEnmafHngDd8mXcYkf3qOu7ntk81cBnyA1v1Y4F4U=,tag:Rw+4yUam5C5Cdbh7/ER7Mw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:dVuaabM15Dw2pF2A/jjo,iv:2QHXD4l9cchyU3hYiCt1bsOV/lGLCmfOIduMqM0UBzo=,tag:20SUylxeDOf5Q6xifzXRTA==,type:str]
-#ENC[AES256_GCM,data:uXhlUoOgS9V3VzpI+/s9/5+tmzhJS53+m9LE88+mYZs92xabX7l5D9J/Syro2JwbaHX+hlMa3ZFRWRmJSEVXtZsJhZoEW/hljIv88VjxQ1IzCGFzaHOe,iv:+EYYcC4Sf1MbOSy3srIAzSDbKE0o5634N5gOeSsxOK8=,tag:p1MUbCAVkGS+hG/VCghQPQ==,type:comment]
-#ENC[AES256_GCM,data:DZoqgQECJ/p7PxRWnpNyB8NTvcuTkXTa8rxkO1CbvOcSepG+vXyWFKvki/gyP+cqfF/rcmnFRVWHhjxd/wC/8hcdaDjIb+Rks9+RWye1lsOmPewb7GkAz+YxPmaLBqnF7yFg2qTZrw9cdHTflGk8iPCbE+pEc97EDiwgtg==,iv:4x3aKPLPe5q1kGYDC7dMzJssUggV1PaCHGCyHVwge4s=,tag:savIx+0LNKIxQQhU/MzqGg==,type:comment]
-#ENC[AES256_GCM,data:nPDKY192eqmg/tUFXMR+Q2HY/v9a/pG0hY7Htc76pLIfw6dLr9BiwWQoPv86tXaOKp1IIyUzarMi819oB4yDR6rX0z94NY0E2q/WloADZa4=,iv:oARn4qHwzcT1ZzZSKQLdFWfilGxAdPKY0s9RoJfsCpI=,tag:pfC/7ROKsgWPeWSin+5nzQ==,type:comment]
-#ENC[AES256_GCM,data:lTWI23uVaWuS3uhO9zkEChcms4RfEkPmitsedOCRoW0jvFf8kUkF+CkQswo2UjX7lSMrKycA,iv:5FrLCoWxp8s7TRwLVdMRRvFv+ZMlfCqUqHGx2h15cQI=,tag:acMFa5u72/nUa+RUAME96w==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:GZpvQp7M5sqet8N1,iv:MF6aJA1vOj358A/RoSnru9bZKqBpf6ZnWd2bJrZ1mP4=,tag:GqjTRXAJMLg1aivgnyi1iw==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:limfHdBAbslT8/7vFSICalA=,iv:Xulrgd0YcY2WkT8phcx+Weh8ooMPJ5gnxoPReue0LGY=,tag:Y6QApl1t0NzCERM3dRLuog==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:vMnwFFBAN6tO3mQr36IjuOg1rls1xuvGzU8zWjHUU+o=,iv:Op6wgzW82HJGSVxxjA0KRbLHkBb9vrC+jVIrCFSblj0=,tag:KcnFEDnk0arEjUfSZydIzg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:B4nbR08/weID7UXQO+V7DFdd3FBGiAPQLsSC3nB6w+z3ekaG8xi0Hg==,iv:pEAgJ+fymCqVtU74dxtH2vM8LWcrRmjE9DMnn8Hk9uo=,tag:1rcQIvEzl0yN+oQQVsIO3g==,type:str]
-#ENC[AES256_GCM,data:+oJqePaPAEQDbzJGkrJQ3Kzy3ea/FSZ8qmcvWyeXUmAj11MDjscEM7QRhUISG9sc5MDD+Pd/Zn82hfNGqAogwg==,iv:tAYWjjCJM20529N9/AdWjD/TL8f8+dN+/XkTGt8DDgc=,tag:kFb88551j3abSc8zPBuwfg==,type:comment]
-#ENC[AES256_GCM,data:ruzRhMogMKw4th3h38iO19O7p5aFyjagf5iW9iFQggm2jM91ZUQVtSwrRD3yiSqTI2RyilGcwXk=,iv:sAvGnh97yIbHvXY6ooJS7hsLLIXZXs4M5UvqpoHf2L8=,tag:xDBHLv/SknQq7junDk+mFQ==,type:comment]
-#ENC[AES256_GCM,data:OK4QfzCAW2CJJKj0OsXFXcw6DStuTvO4XQ==,iv:Km7Qz/UA7dpGd0m8/y9Qc50ySJwyKdc6OkwT6cBvvHQ=,tag:byJmglo5XWntx7BwqGHYkA==,type:comment]
-#ENC[AES256_GCM,data:Gcuv1fzG2c6eQ7sex1Hebh5Jk+9IyQZ8EF1AKR/wGQWbjKEnKXEc3f7bVL2a4eWQvQOD0PAyBkloyRm/gS9suT37UH7pUe9hkrYAPD0=,iv:CgYGxEfhqDRT334A+I7y8ymCRgNo61//6GB52TBFi5U=,tag:yGZv4aR059WduI608YcJmQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:auCsUFHakGJ/ggLa+lQH4eOoU9ic8TMoHZ6hwexQus1kti3n8DP3Zqu35qXFklTw,iv:qqCXSQNRDRrV3yDWjtbJlUEpFBeI6Rddr/b3zD6tWXI=,tag:h5uhhLKLQWyQ7kYrWY3ozg==,type:str]
-#ENC[AES256_GCM,data:K7q0Hr+JFc5Eo8YswXiDtQavBq0RovIC7TkMMlFB9QrkjPtL907zYBNNShXtslVYNQUrKtfS2/ksPz+gZXlv79PQz7SlIlY=,iv:I5R3TOzQoJppCnzxct6bUcIjSfFA2ApiJUXMaQMyD00=,tag:sypIL38GhJ+YEzogbz7Hhw==,type:comment]
-#ENC[AES256_GCM,data:OXXkJ5/SLH8z/+AtzE9p0gkLwGMCBmRY60QvtNABbT5VYrHDhe9IP+Nrh55whP8OQvb8HLwD,iv:AYlkQyGSED+OCijiRl55ecIhqCmCKFOallYQuNK93IU=,tag:R7S7PDza+5kLV96zGG8j4g==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:s6ZF3u3FuA==,iv:xiXCI8j/CMAen1ft8A7no1lBGuygQ592QrhOF6Kni5M=,tag:ZLCkQOoXxzL2R3AVfVHgWA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:gx9kBh2pyzbGBVWIGV4t3yrauUY=,iv:CxzmSJxw5t3ts4YqVkYRB61P1m7f4jyfUhaH7D43vf8=,tag:bXGy1tYYvJliQo7z4VtVbQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:V2viO1lVD1ZvIkA=,iv:Od/y6RmODt70ENrNjHur8w2aRFFqbryi6Fno4xc6iWk=,tag:pdjHtn2ecGayIJToAvcfUA==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:TMMJikdn5xyDWfprNsTq,iv:5g+jNzXpQ68eJA8DRbFkBF156mP0xPIlNaPuc1JB/TQ=,tag:uUCk62A0Dywooo6N9ZLtsA==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:0vkTmmLFJxY93f4QRdaNgLhVn4sdMlkxgg==,iv:YfLn4M4i+P9sHK5EzSH/EQ9z6ZTj1sD1ohQZ4xCZQYM=,tag:sRPgz5XICsHLD+aQCIIdYQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:YAbfS/1pQKpoi9i1pwBm2lsoJ52gWhmcNTnN9kVEWw==,iv:UCmoroJIIMdlC4oEZBCtIC0L0EtdXqLeur206SAH5Gg=,tag:Y5OQRhn/enb+SDXPjn7wSA==,type:str]
-#ENC[AES256_GCM,data:he/mcabQNApZfpClxUaa1IBhiLD3lKxIw8hWHuVmXnbfkX2gM64=,iv:FiFlPMjvvkoW1YVTGNItHyWi61v8+j+5ofPzJso31HU=,tag:FrqvgnIByQMs8u4+D6q8fg==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:vmu/GVqEBY8vhZkz3O7XSU7rrxA=,iv:OzST7N+ntPoLQWbZrcpj159UxIdL/VVNULwQbeitfbk=,tag:gVM3YNHnd1fo6HGf0kawwg==,type:str]
-#ENC[AES256_GCM,data:ziypR52b4VO1ssE3AKc=,iv:fdXQCXXfNgjV/NbRZfluemPBcPtNc8tk8MqSI0OpUqw=,tag:jnw26Xs3o3RDW/S+6qAH4w==,type:comment]
-PODNET: ENC[AES256_GCM,data:ewcagkMRtiBPZ/E/Rw==,iv:x7YVBWjGrx8C1upWeQ9UdL92KW4J+AFdgg4L12QHEZ0=,tag:ulKNqGMRAQGDIPaUxRRwIw==,type:str]
-SVCNET: ENC[AES256_GCM,data:dT8JUagJnkffyPvtCg==,iv:RVTK+MuZe8V0Qiu94KR8a+q/ct6LV9YShFJGmP9xfLY=,tag:Y4LPpEJim1CWEdJ3ae8zCg==,type:str]
+#ENC[AES256_GCM,data:oypmus/uZOOUryRHl47VCixlvkKbH8wGw7RluiNnhOYm2aqrFX+RR6yUIIuG8bz0paoc78+SEbHmP7ZGTxa6S6I=,iv:8OhnCA1QNiKFiDWZWLBBToAX/hip0BAy0PxJdp/6TwI=,tag:EfiUrVxEsrczJbtCASDHPA==,type:comment]
+#ENC[AES256_GCM,data:lZ9X+jJJzhbiegmH001KeonNywLrDQ/9mcGnD7HHayWb7IWTtEXiUuNYssA=,iv:Ume1kWNZNU1q5mjKiufxK18yKqOckykfSQs35lkkkNk=,tag:ZmgyELn1J7Kh2BR8xD6JzQ==,type:comment]
+VIP: ENC[AES256_GCM,data:gq8Xh5MXMOi4B3cEZA==,iv:/bj9kR5MXPOP4zO1dZhupn5R4J+9Tp2MG43sBdm2M2M=,tag:fBe/RgTHuG6YpHFJV2fp4A==,type:str]
+#ENC[AES256_GCM,data:jMvUAUO147V/KdkDtF6vkpTyXCw2BsDf6xfh,iv:7NpBeW+BmbPwltj3j30A1In9A0Full7xG7ZM8oU01Bo=,tag:XFnseZf27fpvbTH0PD+9Wg==,type:comment]
+#ENC[AES256_GCM,data:koFCv/89vVxV87TZTi7nORXgIIzJTapEBg+FsGF9Buzr63xvj4Ebq5nLAqAgivunGLcnHhlaXVZTgx7RtmPL4PwMcfoNBV4BqACnkx4qHFzTv2wao5xZYgM=,iv:VB9UXyR6l95A4jhwehnmSxknkbh4Ht+g/36xh0C86Yk=,tag:/vHH0bM6STwdmFmDJBTUMg==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:/kzKj5JXiEbacgN7His=,iv:Od4S2BLO2KzCjQC70MkboT/76o6mRRXM79XFZHzOTqE=,tag:BP8IHnql7auY9T6lCBXuJw==,type:str]
+#ENC[AES256_GCM,data:tLVZ0nEActuYiySp6htTx9W9yU6ecjHIzJQ4gZAUS7S/ZA==,iv:xgwcUntc4kiZhDAv+TtIIOZ6rQ61LTD9zoarmKIlPxU=,tag:nIsLsP9hTgnjUe0LfGXa+A==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:Q3F48gg96QjrIwLceA==,iv:qtYWD2ut7CAKXirqcVAoDXQph68sCThx39Xht7m3MxI=,tag:FSXMiFE6H55xXg7BnL7eeQ==,type:str]
+#ENC[AES256_GCM,data:DOdgkMvC2Q7Wgp7EcBSZLP1XDQgb1AcoLF3x1BPuP2/nFWS6J7ZPe57mF35HkJg=,iv:NH4x7IhhI0vgLpPPT9L6bLqVAiqC70Mx/Ajith9W4+0=,tag:utyD5zov1nrYR8iO/A9UAQ==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:M9WXZMmE0v224issaI1l77c8sp4FAU4mdvZOXUBCJg==,iv:vV8wtGCJRRCyH1Q7U67Z3grRg/yxDiDcC8mBWUEHBGk=,tag:bkviinn6AcW+qPTiwUInQg==,type:str]
+#ENC[AES256_GCM,data:jdoE+EoFBVn8vv/8AfP59UmbutEAZ9Y9OpKl71dhkLvxwDn0DtEl5tw6Xn/sZnge9R9jEAOrvx+1zY7vioY44yPur5dTfYNi5QmwXfcI3YNVnA==,iv:BOUFrr2Xcr+NOMApmhAqpf0PEpqRU3rKo8xpuJlDGG0=,tag:PIVvLeYduEzqi0L8Nd7mHw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:21D4+om1gw48L3z2nfTx,iv:9+gvfv5N3sWwmU8UdO9JaTP935AohKzEgm7Z9JVeP+I=,tag:gBrdHU47dFYd+kqRUpkk6Q==,type:str]
+#ENC[AES256_GCM,data:RnMK3vyH4EwSApSBAgW2wJNol1C/2L8eS0D8UkcqL5m5,iv:Dv7GW2xpC0CJSQ+nl04puZbcR6AdQuT7I/xz3L61wpE=,tag:U9m9QI+hV4mgCnU2uEOVbg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:K6YgvNfYJz2zxDAhudaq,iv:aTGmK7vuyBzwnDNtD4cKTg3wvS2uMpQl5evVWYA9Wco=,tag:6NREfqOj7v7Mi42Vsk7diw==,type:str]
+#ENC[AES256_GCM,data:DW0KLRX3SQhgrqxSoC7IVo4F1tEfOIkTwRksLgsBpf43+sVT7jFYOn3ockJkJsqbEnf3St9gk3UK3ML56HQ+Tyazh6kx5ERQO4iSVITKb7o=,iv:28YIgREfuoX9uyOACTL2CsnZu9gi+vozCP9HeC/YCK4=,tag:mW/ACMXpLVevH/bRGwCD1A==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:83YWhgLcTXdFWm5mT4nq,iv:KupNxPfXMW1wtpgdnBIRC5OB2fOMTlL6FIVUfO0wGA0=,tag:MBbmo3cuYwGPlruSNYOh7w==,type:str]
+#ENC[AES256_GCM,data:yZrlOS3OJRAas1R75jxuwaGS3bAAgGlB1qj9GdIYuliILMehMycdZcCYbFNAWTt1gTrqI1SkWqAlfrYYximbU9Tyd4NYjeqM/NNVC7dQcEKtMwyTAl9/,iv:nmgUtWTBCYR5WS37N8ZeJg4v0vLCH7ezKavYZ8R0aTY=,tag:ek8pz7YiPM/tz/7yqSTIAA==,type:comment]
+#ENC[AES256_GCM,data:GpFJ8p+5twbgvo0IB7S40uq1JMTEKIK2GZPpupXu6LCZ06ncCU7WgF2NFjt9NzHrFi/2Wyn/K9oVm3AxvLH7TcEWdu9wRGVYnaBnzkK4PDWLZrkJZwMpa6sYUSy4cmBGDX2liZWjH3UweYBMlGgm6tXpSgEf9d10xNQwnw==,iv:4cWSe0uHKrBmXbDI6NbLmQLkDlojI17xBocUM+qs8jo=,tag:4/f8zOrWr54E1l6AJfr9XA==,type:comment]
+#ENC[AES256_GCM,data:XoJDJDkkH6QSSssMn8rGkBuTOJwtNLpJjThLR+98DX6cA7BqxWVA/TaGqmewG3mKWE55y59mh32kq0V8pcdsTGl81/UQDa8j+hcsOTf5UAQ=,iv:uwtzhjtLnOfPbK0F5nBSWG71RhY0V3rkOMZt9RpqZbA=,tag:g8+f+g23PaD4gOJqi0mqaA==,type:comment]
+#ENC[AES256_GCM,data:gqmwNOaXoK1BmjQUuiWbNkBhO5plqnKCsjLiHdL4XnyELprLwN78b0ZB1irYXjIDir9HUwGc,iv:7B/UN8vLoe+oAcjnAfSnLiD4z4FqrMAPBG8EKvIRazs=,tag:fGquCtC+u/NRxQqoaGcCew==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:LenCD3ksYSFOY2u4,iv:kpDcOX3zb33oTPCQjrY6Rm5Fvw06X/KGwBTrwvMq/rU=,tag:ZFUFusIep/mYPR8pcdYuLA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:TIM8oRCcn+ZhJ3LzqVmtHd4=,iv:kiF6ozIMHhAnr3tF6IrwVLRcbt8P4qSNaaaJxCs83G8=,tag:Ythy60hn7p12Tq5VOr+gRg==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:QJ9SRiVL5fWFnZKzM81c6bcGrPVMiY9WSXoyfQdJOMk=,iv:JdtyLiYuCX9YMErvq42uZTEhiCq/rZolkP/yK1maqx0=,tag:KMR3vttU8Yc7Yf3Wnnalqw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ZlBy+lduIglBLpB9oiTadwThso+VDTeAjaoQ+nqcXtKOszxoeeUUYg==,iv:vMSjW2h8q4g1hRVTsltAKpRu7OyS9ge7lqwKcYnauIM=,tag:WhSnQ7U3WNbiPkdigIkPaA==,type:str]
+#ENC[AES256_GCM,data:hTnTJHpKAVYYc5FfCy23qtvExCh0IhB3Zm0D/9CB7w2rnmrpQBI9ChDsul1QUf9ZZfcDK2MEuZ5XRQN8kw2jaA==,iv:JTZcn9SddASgxGreObgKJstw2oJdRRxJIoUCuWiiKwU=,tag:iQCtWH157Ll8OkitCe5gsA==,type:comment]
+#ENC[AES256_GCM,data:gBhgPefanxdlwkh9H61QSyVpYG2GTM6ZtxtP39e7KLSx6ZAb4pXj2xTJ5rTPJ9+ShjoDg39FVI4=,iv:2iFqYzje4seYLYh8bJsL3GuiOj+u/Vp07qvXDbgtzUY=,tag:abEfYZsqb9g6YT+qvRDWDA==,type:comment]
+#ENC[AES256_GCM,data:LeqwRqIQcj2cN55rlRR/Rw6vaEdFCDS0Zw==,iv:nsVvqajdRkrOjyziw5YOHJDfTZLdUIhdf3oSF9jMW9o=,tag:V0HEInJJZr479Jh/gBYFew==,type:comment]
+#ENC[AES256_GCM,data:bfUsywmtkyZZZ0lO0CLMagzK/eRbg8WMXmhpkeZKCpLKYwdOK9bze+qjG2T961efRKYuuIHQb7+jL3JmmoQvLdh3GGbTS0TLUYAumpE=,iv:Wm3I05aMGzwKq4PaUjvaaYTfAy4vDSeNvHCnCDSM01A=,tag:slOlLorueHx/mjJkCyj4RQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:TxlxQ/sAbfRXnoZ05Dk7w5m+19eiiG4Owats8FxZ5pogKOSHQCc285iXPQk6ilSz,iv:1j9baPdHVwuXvnsWyyClPeonNSGv+H7uniiN+sUMKH0=,tag:Ow3K/ZrYo+zKlS91Moa4Cg==,type:str]
+#ENC[AES256_GCM,data:Bksft7qe8biA+asoCTnJvkTwZLe0Q67FHEYBpa2HxRXSPup8BDobf2yARLTPU/GPum7QJT+efpc561x25mWRTQB5NwWkR8A=,iv:xcJk4BPWn/GzLdT/+MuhHsegCMmQlm/la4jfOuQF1I4=,tag:Z6HvnR+HJfmfppAcXGjfhQ==,type:comment]
+#ENC[AES256_GCM,data:6dArOU5SKIZKBMFvXS9PeEUeAGomG/xy/4QTzIJio7bNtRw5+3A0PrirrzZy60b4lzbGc/rl,iv:zQqKzexrhcASxmZPGc5s9lzPVadronfIhm4Onw2waQ4=,tag:y/UFC7e6cxFL/vOKmki60w==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:nPK9uffRYg==,iv:GDXJH9IFB0MXlEbe9B/97Rj8VxDQSZpZp3MYHauQUUQ=,tag:OPA2kg9HxhEkv7xQDzT3PQ==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:j/OnxKNxmAqyP0iGWU8beFHM7VU=,iv:vBmRYa2znB3OKGnnk5IIUG3QZ1XIkCvzb0NjJRUE0k8=,tag:DpsDvYUR+PXMFjkGs8OiFQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:OEJejg66Mm1LPZ4=,iv:wP4ogMNPOjIjZs8CkZmAEUvwj9m9T7MlLOgEoy+pyis=,tag:hIS81RaT8pMzGc6JuLRnUg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:MhymBUNoADDOYqe3+3Er,iv:8sy2567O4W2a8Y16N1VhixBkpwllE5gm2rYH2Z+j6js=,tag:p8BpVvnJxVnoDL/ggwPFUw==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:tbPLGrkxgDixJEVGsEEpbc4wTkhrcnvA0g==,iv:JRBJMnjcs7+NfC8Y/Fa8brAy4OM447P8ERToMdoRinY=,tag:DxDy5vaxzhxl9SbUem57aw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:9eBTZ4pE/0PKTeLuQZjpRp20ZS+FGkSJofmrfSA2cQ==,iv:SgzXIsQywcy3rzYcHe7jgpqj5LftD/DJMOnuvQXPN5c=,tag:Juu2m6ufbS1ji2/l7/ncEg==,type:str]
+#ENC[AES256_GCM,data:ezc1qbPy3i/ghV9WgPkyoqiZQdeEeV63NUOop1OdJzY1U7AZIZ4=,iv:do1ynRV6qoIVhvb1iT/UhrpCyzn2P1OhitNPKVuc9+Q=,tag:l9xOUKVOXbsWJM3fHYik8w==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:bH87KCUCrXBApYYrtmh/Z0yp71M=,iv:QePwQE28VYSEAV4eECx41sOCSiMc+3BTUluHr89N5Tk=,tag:pxQxFD0hvJUZno0VGifMHw==,type:str]
+#ENC[AES256_GCM,data:bFDgm5+/xM5JVIFdkXA=,iv:wH9EET5+hqUDfin7Qe1Zul0ps6aXjY21Zdq1yQUTLI0=,tag:4+ZWZfkYkSHGsDGLjsyapQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:XiT6+d3xNn5qfCxkGA==,iv:uVvbAlNXZST4Qd8XVUBw/bO/hnDbx5MKv6ss3FijnTA=,tag:6UU3W5bZax67FoUMmn7F2Q==,type:str]
+SVCNET: ENC[AES256_GCM,data:u5Wvby4d61OTpv/s2A==,iv:UuYZ9qO8B0An2Vr+udySUy4qLJknsl/b1HCEoB7QyIM=,tag:SYWu0XJnRVlOCkq1o8NOQg==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMYkxRYVBoS1FKd3JHeU5R
-            eWdSSGd0NzB5MDB2UUpGdjhjdkN1SmdlVFRjClF3cmdCUU92VWlyMnpXZXhMNHAr
-            YlpLOFpjNEpMc2hYVVBnSmNDaktwUTQKLS0tIFcwb1JBOUhuNUhWTms0bDh5NUhq
-            T29PV3BhOWFVU2wxVlV6aVZld2lHSm8K03B1clSw+9R2PvKSMU6jwGYawEcnHnvN
-            ktmEp1/ZS/L9+49kgm19IISvBv1OxzpUb9HAKFPUXn5MskhgLnx2sw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWUE5IaG1VNHZHQ3R4TWlm
+            L3RTOHZ4aXBjTWRxYTFuYzBUc0xBNG02NUhvCmE1TitJdTduRXd4N2x6YU1YSTho
+            Z1hQYWxBVVJpMTZiZGY4Ri9ZT2Jqa2sKLS0tIC9QRnhJNmN6c0ZpeEw4UVM2Y3Fn
+            ZkltTTY4aDI0Q0ZkZ3BJbXdMbXo1TGcKIC3emp+Fi546buMJBlpIovJsgWekULx/
+            VJSAhMWIcYnlflKUL5HFNCj2DC+xlH4mugiaXbgAnI83pyBpr1aZcA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-18T22:50:44Z"
-    mac: ENC[AES256_GCM,data:SlNX6zB4lqFV9dhlhYlBuFvbZb3QFini7KeKGv5DU05VLRkz6NH2hdOxyg3zrsbQjFvoeR5tZhtp6tDLsYY2rh6OnCVmJysfG5FZQTkQQqdjpxQVjZXQdGzHt57aj1OfMvE/b91Pn/8DtN6mDf+9THODZN3ext2dvGwspiGviMQ=,iv:ayQI6OS4/hlRVxN+MvR9eGdlhFUkaRrIQ8YWgU/Ze2w=,tag:nKYol8oyTZWNyWwiPp2gTA==,type:str]
+    lastmodified: "2025-01-19T00:22:55Z"
+    mac: ENC[AES256_GCM,data:OjVC273yPRUf66yR6LLE5RXMIpoM2DOjT/+Kb6DjpbCrt5DHsTAPq88p1w9qCz48gXyDClVLHa8HwPD7rm8SK7HIJUJTqSPxOZBozoAalCwJnJo+6cZSkQJ/SFCHTQ6hpzysKL2LQK5BQumDJ0mmOhxEp2dI1u5X23izdVarFe0=,iv:5r/3uz1HdSm2+0IVOP+5hBF5GDkHsfsdzzW7jsF0HV0=,tag:vu99ySo1ZwJaxl3J7OgaTA==,type:str]
     pgp: []
     version: 3.9.2
