--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:y7fAHh85sRUYem9QOxtpE4YH5leTTnj5x5HrYzIZiuvf1eD6Q03LdaF35PESIEezxEIMW8fyxmDv7YzsPz+InMU=,iv:FUTdvWxeLub54J6YH8nyKg4sddWiP9aV2qejA2n1Xgc=,tag:Elpn+OnG2kc4GqwMbrL72g==,type:comment]
-    #ENC[AES256_GCM,data:zVEXl4PdO+XgXyMAlc5qk0ob1qevZG6t/xPqHby6VHE8b8b7eRoy0Bx0Guw=,iv:1hTvfpCAcHU8SM2cj17GkZOmNUSbREgcM4ZL9HGZbhQ=,tag:iStor+U6PuflvttznPhWng==,type:comment]
-    VIP: ENC[AES256_GCM,data:Q+jSEbYB2iSfqVUwrw==,iv:S9L6AqpEMjpbH9BBNJVdmM3UWgsbsTq4Nzr/MlZ/6Y0=,tag:anW45EvszmQUgYtmN1WAcw==,type:str]
-    #ENC[AES256_GCM,data:5sDoBQh1IB8gvvDcP44ioBvUj2iQrthlCxjb,iv:7jYFfyLIn1J8xZ3eYN/sHrCrsTkQDOrQ8OqiLx+w2X4=,tag:G3UQ09d2kprcnAbGKQkg4g==,type:comment]
-    #ENC[AES256_GCM,data:iGKnoeD9mPNMvqYywkRWXcxlOuq4mQXQ31jMQPhEgeo5FkIqSe2HrywoZt9cRtdAv2AkEnQv/CpYuCnZIe6w8ylYY1/VDDUep3jYG0lBR9VLYlqV9z4q1X8=,iv:fqvQN9kpDySkIkBtvcnlQsD/jRrbJ3OnzwaBzCVA7a8=,tag:s5iZxuefwMwTxffxuT4+6A==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:SiEzVfD9v7l8d/9rEoQ=,iv:qmFuDKo7MPGg5DosP9G9/mqD4iCJB+nKrdVR1Y/pkI4=,tag:7ZMnw5Qj22A1WXBypbRqhA==,type:str]
-    #ENC[AES256_GCM,data:Cof0q2FSMoPpKvAbUr9LiBl5OUccGsuJGmuN0zdo4M1iBA==,iv:zExA12z/xdo2A5zxyUBFc4lAD4Q6A0Y49W/RBw3au3k=,tag:oiBphp2rq7DaaV8SOq5Rdw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:DAaIDcvlWVOltgzhcw==,iv:tL/QpNn6UknJtDX386TqDHmrahVrE3Dj3oybpJoMnn8=,tag:07yyz5VtINEwn1EA+slW7w==,type:str]
-    #ENC[AES256_GCM,data:C+mV2mXxJIbZBa5xMSk83Zyhm+nkl0F5kjCJ+OLuC364RPyGa41ZlPRCM8HEXas=,iv:+tZmY0wc2stAFo1eNXo9PR24iiP9gk5KeBBbgnYUTVY=,tag:n5WgGTN2LAtEZARFF9XTlA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:Ws4XTqZiW74ITo5Pi+iwdPaH8blk4eJsEDvXkAaRtw==,iv:NgfZDqSOXwjpyQYKihAj014vz0npISfWp7WE8hLWztc=,tag:7fn6b5rmY3TYpZWzZYxAxA==,type:str]
-    #ENC[AES256_GCM,data:UpAVBL/xkSWStC/ErnuyzrVOS8HS31u7QiSiVM6+2DzO4J0j3RM/fhllp7vEZ8sOuEaXlq7PGH6OQ3I1WYfEGUReBwsgZ1bwFozKcu3MaYBicw==,iv:U5mbmxWo55n9B1/xG/tKwoWTuhouglDxEQpZHfBlV1M=,tag:zScbZdA2nZT5wlredmWanA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:czNIjDq0rH6pDuqeSk7O,iv:9c3mA9ZbGdHEurQbq7YssZt6Wc0Wu6/6FMb25rfKFO0=,tag:8mHjnzYyXxW85b7KUqFAiQ==,type:str]
-    #ENC[AES256_GCM,data:2oDrznqr8qbmaAqQIWfVn2YI/MkUlh3O7nluLXVZoTW3,iv:U2yrnzvGDFlkdHzTfDRVvBDmtwbZ+IbjJVzMiwp7Jjc=,tag:aYhS6tNbGnDlYYQl25/TVQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:ukZ79LBKwVoAXJZTjW/Z,iv:UUxiIl7EKxjkFiPB/bUCsNYMRCOZfCgELntSn6QwB0o=,tag:M9xcAkTZLEY5lQnTGiuzbQ==,type:str]
-    #ENC[AES256_GCM,data:DT/8a061if2QjWO+4+zdWo5T/evi/605OLw9rJIGsWnkxuXUfJMHaTf7cjDIiLsyB4HDd3tU/7/6SpeRwDTnxvzvK6I6AJYhN4mXwzXywkc=,iv:EAx4AmK8Vz/0DprALvDHDks19VdkxNMi9DdiDHGB5CU=,tag:7+ffwqAyvOz9e9HEvB060Q==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:QHVhBIZgujGy2/f9MgBv,iv:gcQv1iwz6ZRaWTVrSpz81Rh8XuwWLf/+oeR13QYBfeY=,tag:y9ZtlQGwC6YdiidXSleAJw==,type:str]
-    #ENC[AES256_GCM,data:OycoVMQznQYOV0F3Znpkl0jOaQ18j5b2o3uw1a/gI1JG6cn637Se0YZByVq8axk4O+RAKGfq5cksZMbhgFDJ18vWAQCgFEsJvdCKRif4bGfd7hiC7g5S,iv:jWmxnPfvfvLpoNJQdou9o1wRS96RK17EiICINS0c9SI=,tag:VMVUbatkjjCUc1y4OaL79w==,type:comment]
-    #ENC[AES256_GCM,data:3fq+fdP/nCQw/kpssCK/t4rnbcG7o3TIQtkMfpBpfNBGp59d4+2BQBufyocl1u4oYOMlz9pGl1ruNhCDhiuBNqC+wVl81+HegiJQPeCDTSChpT0V8OwQx+ChpIjUeZ69zjZB/bm5CSvdAO1JHpS5OXeYWlNrTVI+dqJbRw==,iv:KuermVl/VG1z2K6kFQH/ELqxlchjJsljmuZ3CwsaEec=,tag:+XFz6LESwaCP0j1rkbb98A==,type:comment]
-    #ENC[AES256_GCM,data:c3dK7vloyCAmFh/VL/0bh65WD2idxuMX37Z8Q6LC6FE/YIdCRbyO6rnFgp3dHqHaI4dXbUfXW7WGkh3n9rbvORPsNu4E5psgzzV4wQWo07o=,iv:xNCx7CURwU16xX3Nnkh67Cf7Ra2pVNpUCgxACD8qu0I=,tag:2UhttJieeNLxZV7fni/6pQ==,type:comment]
-    #ENC[AES256_GCM,data:cVUWXyP3CDGbuF+lO4E3ndF6wecwVD+dAHdoffyUSlfjzty2LPXxivN0hFf0BK6nvffdjAxg,iv:HBOMoUtb06iGptSbsGk8FFsH9ABtbDWfk0szxZZRNEk=,tag:eLKrHP5aisCqGimhpBvVrw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:em7fIUsxRtexQVy9,iv:QbBRZBccpag9Foyau6R3fTTaJ5Rn7UhuDZ9VSWKQgwI=,tag:JJvFrzY8cw225Qrnyhz0IA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:tuyY3yMkT4i9gWsdZPFEzK8=,iv:5xaIk/nzIvC127Iljlrl8mHmrTfMZD+zs0j97GM/LJg=,tag:mFfRwXS6lXLeQ5et77EVQg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:3++YsOEzERWVW99J/e3KO67OPTKLPFNZ60nByhfKPgY=,iv:F8wskIwD/2BnLotjzPEIJIM1ntMfrSBgkXcaeyY2qk0=,tag:LnflXyE5ID2nqBvWzgEPQg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6OH7g8vIxhuB5gDfeOIC5ZsKgG+Y2KmpTLuNOCf5fEqXXs67zZbelg==,iv:AT2bmmkswRgIiY3+wdDZAjjb9nWVW5p8+h0qz80UEYw=,tag:2JCUxAAYXsjezdSOaJf73g==,type:str]
-    #ENC[AES256_GCM,data:JY8PeDpqJAZf4CCjSheuO7S1S6GROzSdrSNHTey2y6Z268YBqSe8VXoENOepWivtexkHBTgd27WhOd+n0anaqg==,iv:hjmVsIvqEmSpuh0IS8HqXOKONb6B5pt8DSIVaP/noQ0=,tag:SE2KmRD+OTJvB5uWNlF9gg==,type:comment]
-    #ENC[AES256_GCM,data:Jy7l+NZw6uvX770eOheIxSD2v07+k/0zbfT8YCYbx1Lgww55DQH3nkTXjLAzTLzmyXcZkdAXAWw=,iv:I+UQ9m2BcC7R295+34/hC+rRGnKDLxeyWv1H/HiDFEE=,tag:TQ0KYi1TjaHz4KWG0PH/gw==,type:comment]
-    #ENC[AES256_GCM,data:4NC3xmBxSLtv1I5iAU2uy/LV0cnYOPEytw==,iv:JCzYGOSf9eecAiSBrLFIcsFQvsuZleFBK/X/JzYzlSA=,tag:rQVn4clx6uuPXx831B9Img==,type:comment]
-    #ENC[AES256_GCM,data:LpnfbWMLRCnekJV11G7lblfUn3gcAhrVFw4LudylMAred6wyIxq9GrR2204VVrwj+ddd7tI8aQu/O1lLACbcifnBeVOwvVVx/I5fGXw=,iv:4wVbyN3mumFHuyOlNVM+tcOjQeRF+9NR6fhD66kgn58=,tag:oHFGFZSJNZGNqbmzOe5NcA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:qP8Tjiutr8YH2BiLNisCT7Lsz22Ho4IgVQ4DWzfD6FSs30XdWIRmrrC3m+NMD1oA,iv:fTdw7NwtOcIFMKtVfarwHYL9sF1MPgNyBD+cXvcf15o=,tag:GtOX5DAybZunM4GGmDAglw==,type:str]
-    #ENC[AES256_GCM,data:SJ6ZnMhIPLyf51miM8XhY36ivaeA+3QSxCWPhucAORZjwiCL52As4ICz05pyVflCOo0YChobfth1qiUQZtyjSKiXEP2GBe8=,iv:Zyv0V3/C+VNjpu2cFwlrFtNfuW30vt8XJmLXjJ9PNiU=,tag:97+fabf9mFZ1w07sfy/M4g==,type:comment]
-    #ENC[AES256_GCM,data:9Gnc9EDX0xbvrist1WEdMPbPy66x/odpFyN6A+Qb5Y0peAlsaPFBh7qvilPdPuTCFYhGMeAq,iv:SkFiB2Vg6hO9eRzSYBjknbFFzLaEzCuBy4mbE0e39kg=,tag:7hF43JOrG6wSsgqOhxDlEA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:vOngXHyA4g==,iv:VXrMBChjPBrbN62QJjsd+rTYKGULx5HzdmPkY5g7cFY=,tag:7Q+ECvwnjrtFPwOluw2qSA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:6Ww5ddoh+BGfju7vNclOmu34nrM=,iv:tRy81qSmvw3/vhtSxnlKnGbjh2EwgXazg9fCJhUHfBQ=,tag:6/pZZI9Hby0NxWQfWB+NXQ==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:p0G6V0y8AnjipkI=,iv:vkUs1tiwi+/Y4zmwR4nfNrF+pWkrLQ5fuIG2YrDNDtg=,tag:11xR2RpnM4j/RcB10cx/Cg==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:TR74RNWIidoeVzGwWl2Y,iv:TJgm7y+vjwwmmEE3UlI4aG2q8urhcESe2YV+6TuGRjE=,tag:5hJuWB7k8aTfwPUBALwplg==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:i1uP9FVdgDxS5/nUHDnGNWuhcFvSVJ6/3Q==,iv:O7kGMrgrQi+74W9Jb+Gn7nNiMg/QGu1KLCwaI91dr40=,tag:4nkDGS8c9BNP2H28ybsgug==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:fM1OpneQucOXaABv0b1HduqKx2Ct/8dyDp1GHvKHmA==,iv:bRa8joStuQuvYlvvIDyt/Ikf81FPJXa/Djl8IDX0EBQ=,tag:0/c4JLDQOQUVfZbpnRRerQ==,type:str]
-    #ENC[AES256_GCM,data:VsF1/OFkK6Y/jUytFs9hum9QfiOKgZjpgND1j+oE172DWgm37Jg=,iv:ozytwfoxXCkwoG4DT9Uuky4SGlbkAJbL4HvBZ3DTyt4=,tag:maL3F/DicVDQAzzavrFfow==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:3LBtIUhpZbQS8d3KQr2LS9/Zc8M=,iv:5M81alkmVxUIwhUv0pm4SvaBKNEFiKygXBAWIGRc+2o=,tag:iGYO8S+beu+2F1FZh7Rk+A==,type:str]
-    #ENC[AES256_GCM,data:6pW7QoBaRzOzd0gNl80=,iv:caMiATDym3IYENsXOjWM009E/Mr6kHTUvMZ4TGXiB6Q=,tag:Qzo9ciNrrrbiil1b5cnGjg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:inbYmi9t+IhGnIbRCw==,iv:lxuBcIMHzCy058jssl3Et+XQ48+Oqz1UPQFO7jx6YzQ=,tag:5QyDZ3zSqQtxUj1sOJ8l5g==,type:str]
-    SVCNET: ENC[AES256_GCM,data:Q6uFL16guArID6cQ7g==,iv:OJsbmIutCYLx0qUbFMQECSDoNVlAjS/YRRp4u1L//jU=,tag:C7o4qRWHDO/6PdgG7bJowQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:1dGSIw==,iv:Z3pde1TLsM7eZefFLdH/zG26aYyqSZ/xyyH2ydCrDhI=,tag:XxY4GdNXc12DBaM27J1mxA==,type:str]
+    #ENC[AES256_GCM,data:vUT/0yEuS6f+lVsPrh9LxTLwgyfV8RyJtZmQC5ALMXMsA+2bUiBHkzAzHSGzOoCVIW2Y6li/clrrQmd6Fc5tAxU=,iv:p/Zs9mdtmEJ7JuWb+QzAEIhLZoRZ1yV7Omr3hNwXVZ4=,tag:yfXd9EpESRr1JiwSJYzIzg==,type:comment]
+    #ENC[AES256_GCM,data:M5vZYIPOeG2Hye2uXO4LZXbF0a0mG/6u4TOfJ50Qe1kyCScW+XtMN8Pwuc8=,iv:7sOQfDWG4hHzsid/emqFfCwamj2QMg29GZtm3PEpg2M=,tag:bSuen0jQYG26uTo6aQWFjQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:Q+ZCBQc7C5aUmHDGXg==,iv:qVp05IP1qkN2wlSxw6FvDjWc65U4mq9XkqaBULMTjIw=,tag:gz6TKf4VUn8Ti6fRotVOZw==,type:str]
+    #ENC[AES256_GCM,data:qCHfzAYKE2mH4+97nvvUQA2DQISUDeDj+mSV,iv:zh2vPurumKaMqmu2oOuqcskF100fpMWrbSYpFg0IYq0=,tag:xMcw56897TkuVoUs57k0qA==,type:comment]
+    #ENC[AES256_GCM,data:cTVBKlOePk6m2IvOJR8kM5vArA4UVatP3zKb8KmGKi/mJhMZywXVnHA3FsS0w+0cNqvBMERU2LeJoBOv2qfzvms/KW5eapmpi95AQyH1NMryTajXd1akb/w=,iv:r4tKa12MdNvsSMx9HksY2KW/5rgM+aOxKF9UhN8LaNs=,tag:PKob0km6F+9nmI3NtfpbuQ==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:G/JulXMCgprEz6fpA1Q=,iv:vXwPKXMyVl+7C0aVIGFPHnZuREmzFdZbF9HDn4pn0R4=,tag:wSdhStfdP1RH/LgF6tuRPQ==,type:str]
+    #ENC[AES256_GCM,data:8i/0a5fGTkul7lOasmejVwOY54sqDJthtcFQB2Q3IPnWUg==,iv:Cr9xRS0sNzOPJDDlEyxxPv0eXn+D6CnL43QuHzb7xUs=,tag:kZw7DmTMQ+qgbxNIt0/l+g==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:k7E96tyU/+kS2SoHFg==,iv:EH7KiC2CGtn8KWqTy1VjxsfWicEvuIID0xSvnynJkyA=,tag:oN8RJrNwzYs9hdVGSpklGQ==,type:str]
+    #ENC[AES256_GCM,data:SpP3rRwtAoDl2vA457fU6ppONk1bPmxrLY4knC9s1MN90Hy62QHoAwRn7DW8khQ=,iv:FmQIfuQR+BKQXZrdJnflOajfYjRoMjOfeOjSYKnGKT8=,tag:1iwU5pUTpgg16le/1DXk6g==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:LtbU2KuTFbPARjPzVp0Bnvms0oe5S7vwHMcp6o/ZSw==,iv:QudI4wUaBIWflekTmuIINkhK8YrTQT3MnIR/pNRN5nA=,tag:TYnx+LAynSYk/3amRZmswg==,type:str]
+    #ENC[AES256_GCM,data:E+6tdSNoTJHdKf5PNU3/jPMRH2ZVnHyysEG+GOoZGxh4dMLNqTwHdzS9HWdZjVwMItmWKjsHh3q2GUwrIbj59kwng88mzgYXE61BGA/bBo4ANw==,iv:44XyUjxyPQthaMEQN7I1ATjEfOUNLcFpavnV5xI2QCE=,tag:Z3srLhXJohtAis+DsRJKew==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:nwaIrQvC2OsMJBa6wJfN,iv:Kamu/6aTTA4N2EJd2yD+/h6ZUjZRh3NYADqnO1J888Y=,tag:YH8JVtK939eYuOfD8z98eA==,type:str]
+    #ENC[AES256_GCM,data:NmZcv6kxtdcIOkR7ucbrlst9UAovtEn2gKhxhgUlXBp4,iv:/mXTNYBGMlZD3pZZ7pDtGVT14nWJoZ140Ygl600EbrU=,tag:fQ1Xoo8vTCqH5jg3ZG08wQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:zNRSA7TcdsAMqDefgH7T,iv:Z5raEVHFbMj7Rzd5mjSCx4hni5KC7Rgwj+Jt+H/cWAc=,tag:KpGGHfORBpnF37ZiSTrptg==,type:str]
+    #ENC[AES256_GCM,data:WSsXIXksmfr1iaWkf3A9OY0qJN3czfBqOotyAWhnbNubamH9dzteXAwjJoKVZSaZxMONpw8x1Atmy2FilyjeDiUJFO0JcTsqYFla6EC7U+Y=,iv:AQZSrTYLnl1pKkL+L5FeiVnu/qB2YClvKRVhkfYp3Vo=,tag:oCHpQVSoiIUldlVa8YIabg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:GQ5LvWXpEOYWizoLZ1cS,iv:R/wdVppZwoaIZU8VMmIA8REvpGSJT2ERTOS8n8Lf9Hk=,tag:r9C0Tv4nMktwZudIcqWMuQ==,type:str]
+    #ENC[AES256_GCM,data:q8I1tub5j8ObTUVHXsCJmCxBJu6FaOQkEdTTOaAsxVTC1qZLZWs6aVVEPYDo250hMo76Qu73pACK9KXXqb363NPfIOOhSSkMRZKX/pP31GCUIdaVZhkD,iv:+LJWC8+0DrkXDkUVKmZ+p82TVQNYvSQYKOACQzIpmuw=,tag:Nbgpa/hxD3PH8dFEAGif0A==,type:comment]
+    #ENC[AES256_GCM,data:WEsr7XbopULOTzKiy8FEcKYBkySwrTAgg5mCNkKbJdDrqQ6HZiEB3S2Qriw+bIUcQv/Vf0Hzliy4nzgEBOp1y+rDTKzvjCVM4QKX3NZj6yw1L6K1rkVLsNu5DqkJT12a/uj2ApB6FDXUJGQiGuZzBccp2TVQCeiegbXEsw==,iv:nNjP8SRKjeu+Mj1DsdatY1zOoXfYfzpiqoX6CTOfKZk=,tag:sFKJEgAV3FkpvAD5GrtTMw==,type:comment]
+    #ENC[AES256_GCM,data:/5BIH4MyU3wgnKVxWjB0iPrzMcF4RzB0Fs9Vy6WJb8nk4W3bDjFnxVrNTElnETlt0dN5hM+HPqg77sdUf0gm+GPKaQ8qObWmhe0c4AkyaWg=,iv:mTimBxx/oIxfYFFpBXBCgH/oEBysLgjeXHuuMROM8vU=,tag:fKPK29XdM+osworLuN7twA==,type:comment]
+    #ENC[AES256_GCM,data:NoecSNdf0ZrtlcMTAC4SmDsglHIfxoPJz4tQHBM2eA17oZI1oZ7AtnBxYnaYhafaCxgU2RfO,iv:NDdIQzXa7IGItApvaD3D6ZQ4uj3ueR/NTqwsaGghOJY=,tag:P1KCI2jT/NhU+XtDgojagA==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:CDSikcXnEEgmj5WR,iv:DCCkdBXCxUqN4tPWQrrGxJjQmok9NKxHkIYwt49dGrU=,tag:SqXSNuProBSweezCR0e1ag==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3zV6KYN1kZxd8yUy/bhipHA=,iv:beCm5+VEfVGr08NtYBOxAFJxLtJpKL2ZytDfHMiOrIM=,tag:+Q62nMqOMVsmF0wLUrJHAw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:0gFOR33NOlICheQ/IqMT+YqS4CKgX27XBH3zFte/tSI=,iv:E5ODnsLthdubs3Z5BcStkxtYQgGkvsuASgfDQpxsjaI=,tag:alohYhEjcQJ1SSpM2z9Nmg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CO3+lkOnJtTzi5zq/JrEfRIJ+TV5v2/WOujLaT/n9bU/WJTzkgN/uQ==,iv:0o0lTtKkIGk81n8j/eZJdOLeVvRz/+fBGMVnsn5GGKw=,tag:lRj0rnCOysAMIKqJTvSSQw==,type:str]
+    #ENC[AES256_GCM,data:gOsz2uvlmKWH7DLPQFvFMOvAHdh4eeC16Z0xkIHmbqPVH8eWiqOQ2trzVFXGwFKBUb/8OtrCGNuFz15yo5PedQ==,iv:XhBv4lEPluvW8UP7CJBkrWfTmpFprKuwn9FS94xSQIQ=,tag:4nedXLeyVgTd+l2+c5kvMw==,type:comment]
+    #ENC[AES256_GCM,data:pO+dEimMaGEc2mR5GuYXioO3T9YeDV/kqzGH4xuse0V0m7yrQUNBBz6d/cKTXbbYJjyNKR8P7Dk=,iv:Y224ud26lCAiq4QYL/hODo3yNgxAv6pV6A+Jqgh6lYw=,tag:7Yqti/yivsOSc5177Q1Mlw==,type:comment]
+    #ENC[AES256_GCM,data:kBggZrc4aKAV7b0njec3FR5MjZwCsClGwA==,iv:cIp1vhXwmSRez7tFI+6Qy5WZovMCFraZgxCBo3AauHQ=,tag:lnhFr7fGcyw7ox2FSSzfkA==,type:comment]
+    #ENC[AES256_GCM,data:kX9Be8nUfT9Fn1rGaztBTmfinmk+NOfLleMGiLGS+S2wXr1GPaDGTnvLOA0EYnl1M51J07INkzW0MMhjLSBrjSMXUk3wmQYzX+NfM/s=,iv:yOmCELlNuSUR/SX8N0UWMyMKKcMaXX+DTl9taXtxAho=,tag:OF9M1oz0njOJsUAEWAfENQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:u6XRsQ0IEPG7ItjaVsqGE79Dl5/Ps2YswrRA5i+ExybAnBGDkiKAcWkeIVGlveON,iv:UOJZ3TpYItRTu3SfcUfF7yGTxSFfvDtqLOMGq6u2/Xo=,tag:D+c4AcL5aAjODwsorZ2gMg==,type:str]
+    #ENC[AES256_GCM,data:NU/KTbj+T6h+FkuLpBdRNTtUC7SYqp8NrhUEvYhRadDr/gV+lYXpP6VFT1ULGOx4nnNi3fJd//GsiVpYoTOgSdMziNF8+rM=,iv:uHo4ofEwCJTpJrth5lI85lgcwIzOPhs8Ti7CSzjvdgg=,tag:pDVQuMrTNpdvmyepB+B1Pw==,type:comment]
+    #ENC[AES256_GCM,data:ULwSe+K/wbWn+BQ0SzlCPvtoEl0vbNak8K4VpApvdCaPy5VDD6Xlq4KkoP9TLNAGkM4YVyZE,iv:92cf2tjhC5xjezU0clcTK8saw8Zms+XJvnugl7/7hg8=,tag:SSWQVuu9gaeVjk+7deBpzg==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:YDN2D7eqbw==,iv:yisjsZH3SJGR7vI3i/fuwi4XM/+be00kzY1kXF0GTUA=,tag:dm72svWm15FuaSL1iDM6oQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:7Jj7GVhZYI2JuIzeKbUxsUKs69E=,iv:n7j/7KlEA25uSiIMtHndQTBJaaNy2lYqAn02kLslBDA=,tag:32LOeQvOcZGWiK4ctf7lng==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:PXWo+RTNe2ILPCM=,iv:5o4i6vifEnaTFX/Ekefx9kTvWI82q79cFnkKUBXbN2U=,tag:CMbr2qYsykGCxViYBuxLPw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:NV5KFHNo2vNLSp4WRDtQ,iv:7Y+ui6f7BvxfsUBvDBnwnwcPOqr2PGsodcxPThDNSH4=,tag:DrhkaKB+XApgv/cKeUm4vw==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:fxtGz4uEnCucVjPkpcFx760JGpp99k8sHQ==,iv:/5qZ3mfuvpaEbwXOxdd2RnDPMDhidobxsnz/ZM8FcGI=,tag:bCd1CdiAG+F6sMcTlErMdA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:8J9dJSD53rISg8Vacu8ZLv+lHdeg3ehopig+kSMFcg==,iv:G1530hzS54CIdpHjSrk4wbtpgZjX8RmjdFN518dk+Zc=,tag:K9yZDnnk3iabMbMWheJFCg==,type:str]
+    #ENC[AES256_GCM,data:O5uDw/6M4TVHdse1DZNixmJQmQOcj5NZjvH1NuyWQPhfRVoBF1k=,iv:1Qd9SH/r4ukty8Kmxpj8pI5JBTMvY35TdsonpMOtgXo=,tag:rQkpaTKt9Pg/+UJgWc+RHw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:duZC1rJtkBL5YZ8bW9pWUGc9OfM=,iv:mkdL78+ynYsEgZeVdRV5cJRDM4dRc4b7PsGotdOxhVg=,tag:yJJef7kT19e8HjmwaUpWdQ==,type:str]
+    #ENC[AES256_GCM,data:pkDrf/2G5Zxc2iQgyDQ=,iv:9Y+1ZUEJqiRz3b3Bc5ogD/o8vQYfRuFW0YtAyU8ja0Q=,tag:gEEUdE4YNhGJYFpGzeg8eQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:qAUTlTpF2eEA2MrawA==,iv:Pq/4uHcJKKlK1ltFsB85rCgOpNObEP35uq5uPlJmwY8=,tag:Jr0B2PaYTB5uKvDKiLcXGA==,type:str]
+    SVCNET: ENC[AES256_GCM,data:DBfVrN06TxPhceZq5A==,iv:ptKGtBk50BOAAAVjvgMsKK1oLKWN+q/qIYt5x1JzZUU=,tag:21BECN8luY5BC523X8X5cg==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:FWvLzA==,iv:Aladxp7pofJ9pkZIp7RmK4Asrn4og5ZhodYO3vfKBGw=,tag:anKwqdfryBt8g5vxyu2FYQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBITDJJK1VJQTJnSmRocE0z
-            L3RFa05DMG5wR21tYVlUenVtaVptZTNHNnhzCmJ1WFlZemFKZlVBb0VPMjFHcnNT
-            SUNhMThjSWFLV1huMlNMRTZDQ04xQ0UKLS0tIHJBamE0WnZjOC9mS2p5Rnl1cHow
-            WXJ2U1dKYWxXckRqNEtQY3hlMkRLa2cKt2wFbF+TqjU9cCd57jLLwPrp9ohXgneL
-            57Oj1ZGujc2MnYWuz7BC/1YRYTKxLzhHfg1Njve7U3MilKmPF/u3fw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnOXJ1SWdjK2pVUjRnaWZa
+            b3ZUUzdpMFlmVnkrdnZRaGJNVlhETHp4MndZCjIxRnVMRStmTVNLYzJHaEsyR0hp
+            ZlpMTTlxaG9ON3NQVkwva1VUZmtxejQKLS0tIEZFdGttWFZ3WFNlbmdaZWU0QkxW
+            eVhzRHR1R3dCa0RvV3R2bi9ZU3Y1WDQKo7UVP4HlsSZfMXe7btrmuanBV164piU7
+            jdUY1a8f7jQQWcfQtbCKC3boQyYk1RkhBf6MWitXkDRXEbPs58XYDA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-18T22:50:43Z"
-    mac: ENC[AES256_GCM,data:IqFgcxixjXkx+10vu2cm47fZRjFQBn8mzEQBBbQoYFEtlbANWxh0EccPutXulh1yulEca/mKp4GzT21KeZuuBcDHJPBNnYzDosBleaNOvDZ+GALhm0G5/q7j4uAmITSHwOOPSkEH7xmfby/G/i/NxA+TIUTAbeWcIPqGQWAME+Q=,iv:X1CYTBwSR/VXHmRMylLxBy31Tkh7d588cHelflk9voU=,tag:YvBA0DA2E0oZ2a2KqrtcXQ==,type:str]
+    lastmodified: "2025-01-19T00:22:55Z"
+    mac: ENC[AES256_GCM,data:MAgghGYr+pLNgiJpKWtkCIQPzRiiMRrcvbE34uUWgO+S0zwXh0WUXHYjBGi+WVQff5CtSZHC99QMZ352qenWU72sY/P2VI5omB+YafGOBuYCfvZw4ASJatfMOf+G67z/TOtp3J9EEmQpubdQSpsF7LTLLd6FTLKPFDn2fm50yfo=,iv:wahjZdfLfvvMBWglDkLhhiEpnQP8K4Ez6gDJxAFIPaY=,tag:8vFDsxaEUt/s6xU1w1iJlg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
